# quick-doodle

./: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html  shortcut-settings.html  vite.config.ts
.github/workflows/: main.yml
models/online-htr/: README.md
scripts/: export_online_htr_onnx.py  prepare_online_htr_assets.mjs
src/: App.css  App.tsx  index.css  main.tsx  shortcut-settings.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/MacOs-iOS.icon/: icon.json
src-tauri/sidecars/: online_htr_sidecar.py
src-tauri/src/: ids.rs  lib.rs  state.rs
src-tauri/src/components/: tray.rs
src-tauri/src/helpers/: autostart.rs  events.rs  icon.rs  macos_panel.rs  mod.rs  online_htr.rs  settings.rs  settings_store.rs  settings_types.rs  settings_validation.rs  shortcut_settings.rs  shortcuts.rs  shortcuts_runtime.rs  spellcheck.rs  text_correction.rs  utils.rs  vision.rs  window_service.rs
src/components/: index.ts
src/config/: canvasVisualConfig.ts  colors.ts  contourConfig.ts  highlighterConfig.ts  index.ts  roughOptions.ts  selectionConfig.ts  snapConfig.ts  strokeColors.ts  strokeConfig.ts  strokeWidth.ts  textConfig.ts
src/helpers/: toggleThemeMode.ts
src/hooks/: useMainWindowVisibility.ts  useThemeBootstrap.ts
src/store/: index.ts
src/types/: canvasTypes.ts  drawingTypes.ts  index.ts  roughShapes.ts  settings.ts  toolPredicates.ts
src/utils/: highlighter.ts
src/workers/: index.ts  snap.worker.ts  (+1 more)
(+247 files in other folders)
