[package]
name = "quick-doodle"
version = "0.1.0"
description = "Quick Doodle is a lightweight macOS application that allows you to draw directly on your screen with ease."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"
window-vibrancy = "0.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
